@@ -1,3 +1,7 @@
+2010-01-10  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug: #13159: Render Button in version tab "Create version of this page" if no page version exists
+
 2010-01-09  Tolleiv Nietsch <nietsch@aoemedia.de>
 
 	* Fixed bug: #13174: Sub Page Datastructure Field missing (Part2) 
